# UniSense

./: .gitattributes  .gitignore  LICENSE  README.md  _e2e2.txt  firestore.rules  render.yaml  start.bat  stop.bat  storage.rules
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/data/processed/: compass_dept_embeddings.npz  dept_guides.json  dgs_gecis.json  dgs_rankings.json  dus_rankings.json  exam_calendar.json  faculties.json  iskur_guides.json  konular.json  kpss_kadrolar.json  kpss_mezuniyet_alanlari.json  kpss_nitelikler.json  kpss_ozel_kosullar.json  kpss_placements.json  lgs_liseler.json  ozet_kartlar.json  tus_rankings.json  universities.json
backend/data/raw/: turkey_geo.json
backend/data/raw/avesis/: academics.json
backend/data/raw/urap/: urap_2025_2026.json
backend/data/raw/wikipedia/: infobox.json  universities.json
backend/data/raw/yokatlas/: program_groups.json  universities.json
backend/data/training/: README.md  dataset-metadata.json  qwen_finetune.jsonl  unisense-egitimi-kaggle.ipynb
backend/scripts/: build_unisense_dataset.py  enrich_geo.py  generate_training_data.py  probe_dgs.py  test_queries.json  test_queries.py
backend/scripts/reports/: test_report_20260505_121827.md  test_results_20260505_121827.json
backend/src/unisense/: main.py
backend/src/unisense/cli/: build_chunks.py  embed.py  fetch_index.py  slim_data.py
backend/tests/: test_ask_service_units.py  test_auth.py  test_config.py  test_input_sanitizer.py  test_rate_limit.py  test_robot_services.py
docs/: AI_CONTEXT.md  (+4 more)
(+156 files in other folders)
