[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unisense-backend"
version = "0.1.0"
description = "UniSense — Üniversite tercih asistanı (RAG + sıralama veritabanı)"
requires-python = ">=3.11"
authors = [{name = "BrokyEwing"}]
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "chromadb>=0.4.24",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.19.0",
    "huggingface_hub>=0.23.0",
    "google-generativeai>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
    "PyMuPDF>=1.24.0",
    "pandas>=2.2.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "cachetools>=5.3.0",
    "firebase-admin>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
unisense-api = "unisense.main:run"
unisense-cli = "unisense.cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["unisense*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
